<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_screen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/Home_gradient_bg"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:background="@drawable/home_gradient_bg"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="52dp">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Home_gradient_bg"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/applogo"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/encrypt_it_"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Home_gradient_bg">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/home_button_bg"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:onClick="onEncryptButtonPressed"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/encrypt"
                    android:textColor="#FF7A8A" />

                <ImageView
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/Encrypt_Desc"
                    app:srcCompat="@drawable/home_encrypt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/home_button_bg"
                android:elevation="5dp"
                android:onClick="onDecryptButtonPressed"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/decrypt"
                    android:textColor="#FF7A8A" />

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/Decrypt_Desc"
                    app:srcCompat="@drawable/home_decrypt" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/home_button_bg"
                android:elevation="5dp"
                android:onClick="onGeneratePasswordButtonPressed"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/generate_password"
                    android:textColor="#FF7A8A" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/generate_password"
                    app:srcCompat="@drawable/home_password" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/home_button_bg"
                android:elevation="5dp"
                android:onClick="onShowPasswordButtonPressed"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/saved_password"
                    android:textColor="#FF7A8A" />

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:contentDescription="@string/saved_password"
                    app:srcCompat="@drawable/home_show" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/home_button_bg"
                android:elevation="5dp"
                android:onClick="onAboutUsButtonPressed"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/about_us"
                    android:textColor="#FF7A8A" />

                <ImageView
                    android:layout_width="51dp"
                    android:layout_height="53dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/about_us"
                    app:srcCompat="@drawable/home_aboutus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/home_button_bg"
                android:elevation="5dp"
                android:onClick="onSettingsButtonPressed"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/settings"
                    android:textColor="#FF7A8A" />

                <ImageView
                    android:layout_width="51dp"
                    android:layout_height="53dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/settings"
                    app:srcCompat="@drawable/home_setting" />

            </LinearLayout>

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>